--- a/OOAD_final/src/main/webapp/WEB-INF/views/common/navigation.jspf
+++ b/OOAD_final/src/main/webapp/WEB-INF/views/common/navigation.jspf
@@ -1,3 +1,4 @@
+<html xmlns:th="http://www.thymeleaf.org">
 <nav role="navigation" class="navbar navbar-default">
 
 	<div class="">
@@ -8,10 +9,17 @@
 	<div class="navbar-collapse">
 		<ul class="nav navbar-nav">
 			<li class="active"><a href="/">Home</a></li>
-			<li><a href="/list-reviews">Reviews</a></li>
+				<li><a href="/list-reviews">Reviews</a></li>
+			<li sec:authorize="hasRole('ADMIN')"><a href="/employee">Food Critics ONLY</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
-			<li><a href="/logout">I am done with eating! Bye</a></li>
+			<li><a href="/contactUs">Contact Us</a></li>
+			<li><a href="/chefPage">Meet our Chefs!</a></li>
+			<li><a href="/logout">Done with order and eating? Logout!</a></li>
+		</ul>
+		
+		<ul class="nav navbar-nav navbar-middle">
+			<li><a href="/onlineOrder">Order online/Home Delivery (New!)</a></li>
 		</ul>
 	</div>
 
