--- a/OOAD_final/src/main/webapp/WEB-INF/views/commonCode/navigation.jspf
+++ b/OOAD_final/src/main/webapp/WEB-INF/views/commonCode/navigation.jspf
@@ -9,6 +9,7 @@
 	<div class="navbar-collapse">
 		<ul class="nav navbar-nav">
 			<li class="active"><a href="/">Home</a></li>
+			<li><a href="/list-reviews">Reviews</a></li>
 			<li sec:authorize="hasRole('ADMIN')"><a href="/employee">Food Critics ONLY</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
@@ -23,3 +24,4 @@
 	</div>
 
 </nav>
+</html>
